--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,73 @@
 .container {
-  padding: 0 2rem;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.mainImage {
+  margin-left: auto;
+  margin-right: auto;
+  height: 420px;
+  justify-content: center;
+  border: 2px solid #D3D6DA;
+}
+
+.header {
+  height: 50px;
+  border-bottom: 1px solid #D3D6DA;
+  min-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  font-size: 24px;
+  font-weight: 900;
+
+  cursor: default;
+}
+
+.game {
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+.inputSection {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.enterButton {
+  background-color: #D3D6DA;
+  border-radius: 4px;
+  font-weight: 600;
+  font-size: 16px;
+  padding: .5rem 1rem;
+  cursor: pointer;
+  margin-left: 10px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.enterButton::selection, .header::selection {
+  background-color: rgba(0,0,0,0);
+}
+
+.inputBox {
+  border: 2px solid #D3D6DA;
+  font-size: 24px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.unsolvedState {
+  letter-spacing: 2px;
 }
