--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -55,7 +55,7 @@
   margin-left: 10px;
 }
 
-.enterButton::selection, .header::selection {
+.enterButton::selection, .header::selection, .unsolvedState::selection {
   background-color: rgba(0,0,0,0);
 }
 
@@ -71,6 +71,8 @@
 
 .unsolvedState {
   letter-spacing: 2px;
+  font-size: 24px;
+  cursor: default;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
