--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -100,6 +100,10 @@
   white-space: nowrap;
 }
 
+.wordCorrect {
+  color: orange;
+}
+
 @media (max-width: 420px) {
   .main {
     max-width: calc(100vw);
