--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -111,6 +111,20 @@
   color: orange;
 }
 
+.overlayContainer {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255,255,255,0.5);
+  position: absolute;
+  z-index: 1;
+  animation: 3s ease 0s normal forwards 1 fadein;
+  -webkit-animation: 3s ease 0s normal forwards 1 fadein;
+  opacity:1
+}
+
 @media (max-width: 420px) {
   .main {
     max-width: calc(100vw);
@@ -146,12 +160,18 @@
     transform: rotateX(0deg);
   }
   45% {
-    transform: rotateX(90deg);
+    transform: rotateX(60deg);
   }
   55% {
-    transform: rotateX(90deg);
+    transform: rotateX(60deg);
   }
   100% {
     transform: rotateX(0deg);
   }
+}
+
+@keyframes fadein{
+  0%{opacity:0}
+  80%{opacity:0}
+  100%{opacity:1}
 }
