--- a/styles/WinOverlay.module.css
+++ b/styles/WinOverlay.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     background-color: white;
     max-height: 90%;
-    max-width: 420px;
+    max-width: 500px;
     padding: 16px;
     box-shadow: 0 4px 23px 0 rgb(0 0 0 / 20%);
     border-radius: 8px;
@@ -35,11 +35,17 @@
 }
 
 .image {
-    max-width: 80%;
+    max-width: 66%;
     border: 1px solid #D3D6DA;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
+}
+
+@media (max-width: 550px) {
+    .container {
+        max-width: 90%;
+    }
 }
 
 @keyframes flip {
