--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -20,9 +20,17 @@
     margin-right: 30px;
     margin-left: 30px;
     font-size: 18px;
+    padding: .5rem 1rem;
 }
 
 .navbarButton:hover {
     color: #ccc;
     cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .navbarButton {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
