--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,11 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+
+a {
+  color: #6aaa64!important;
+}
+
+a:hover {
+  text-decoration: underline;
+}
