--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,13 +57,16 @@
 .display, .displaySolved {
   padding-left: 20px;
   padding-right: 20px;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
+  word-spacing: 5px;
   font-size: 24px;
   cursor: default;
   margin-left: auto;
   margin-right: auto;
   margin-top: 20px;
   max-width: 420px;
+  font-weight: 400;
+  text-align: center;
 }
 
 .displaySolved {
