minor font stuff

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,16 @@
   --yellow: #c9b458;
   --grey: #787c7e;
   --green: #6aaa64;
+  --text: #111;
 }
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Helvetica Neue, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, sans-serif;
+  color: var(--text);
 }
 
 a {
