--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+.header, .headerContainer {
    height: 50px;
    border-bottom: 1px solid #d3d6da;
    min-width: 100vw;
@@ -6,6 +6,7 @@
    justify-content: center;
    align-items: center;
    text-align: center;
+
 
    cursor: default;
 }
