--- a/styles/Archive.module.css
+++ b/styles/Archive.module.css
@@ -1,14 +1,34 @@
 .container {
     min-height: 100vh;
     min-width: 100vw;
-    display: flex;
 }
 
 .content {
     margin-top: 40px;
-    width: 60%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.image {
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 420px;
+}
+
+.caption, .captionHidden {
+    cursor: default;
+    width: 100%;
+    background-color: #eee;
+    border-radius: 4px
+}
+
+.caption {
+    color: var(--text);
+}
+
+.captionHidden {
+    color: var(--grey);
 }
 
 @media (max-width: 768px) {
