--- a/styles/Archive.module.css
+++ b/styles/Archive.module.css
@@ -16,12 +16,19 @@
     max-height: 420px;
 }
 
+.dateLabel {
+    margin-bottom: 2px;
+    margin-top: 40px;
+}
+
 .caption, .captionHidden {
     cursor: default;
     width: 100%;
     background-color: #eee;
     border-radius: 4px;
     padding: .5rem 1rem;
+    margin-top: 12px;
+    margin-bottom: 18px;
 }
 
 .caption {
@@ -30,6 +37,10 @@
 
 .captionHidden {
     color: var(--grey);
+}
+
+.watermark {
+    color: var(--grey)
 }
 
 @media (max-width: 768px) {
