--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -17,6 +17,10 @@
    font-weight: 900;
 }
 
+.logo > span {
+    font-weight: 100!important;
+}
+
 .navbarButton, .dummyButton, .faqButton {
     margin-right: 30px;
     margin-left: 30px;
