--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -113,34 +113,30 @@
   color: orange;
 }
 
-@media (max-width: 420px) {
-  .game {
-    margin-top: 10px;
-  }
-
-  .main {
-    max-width: calc(100vw);
-  }
-
+@media (max-width: 460px) {
   .mainImage {
     width: 90vw;
     margin-left: auto;
     margin-right: auto;
   }
-
   .inputSection {
     flex-direction: column;
+    width: 90vw;
   }
-
   .inputBox {
-    width: calc(100vw - 20px);
+    width: calc(90vw);
   }
 
   .enterButton, .homeShareButton {
     margin-top: 10px;
     margin-bottom: 20px;
   }
-
+  .main {
+    max-width: calc(100vw);
+  }
+  .game {
+    margin-top: 10px;
+  }
   .tableText {
     max-width: calc(100vw - 100px);
     word-wrap: break-word;
