--- a/styles/Overlays.module.css
+++ b/styles/Overlays.module.css
@@ -90,7 +90,7 @@
 .playButton {
   color: white;
   padding: .5rem 1rem;
-  background-color: var(--green);
+  background-color: var(--purple);
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
