--- a/styles/Archive.module.css
+++ b/styles/Archive.module.css
@@ -1,10 +1,10 @@
 .container {
-    min-height: 100vh;
+    min-height: calc(100vh - 120px);
     min-width: 100vw;
 }
 
 .content {
-    margin-top: 40px;
+    margin-top: 0;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -20,7 +20,8 @@
 
 .dateLabel {
     margin-bottom: 2px;
-    margin-top: 40px;
+    padding-top: 40px;
+    margin-top: 0;
 }
 
 .caption, .captionHidden {
